--- a/src/scss/menu/block/mention.scss
+++ b/src/scss/menu/block/mention.scss
@@ -3,7 +3,7 @@
 .menus {
 	.menu.menuBlockMention { width: 360px; }
 	.menu.menuBlockMention {
-		.content { max-height: 200px; }
+		.content { height: 212px; }
 		.item {
 			.name { @include text-overflow-nw; width: calc(100% - 26px); }
 		}
