--- a/src/scss/block/media.scss
+++ b/src/scss/block/media.scss
@@ -10,6 +10,21 @@
 		
 		.wrap { max-width: 100%; position: relative; display: inline-block; overflow: hidden; }
 		.media { width: 100%; display: block; }
+
+		.wrap.broken { 
+			@include text-common; position: static; width: 100%; line-height: 20px; padding: 11px 13px; border-radius: 6px; border: solid 1px $colorLightGrey; 
+			color: $colorDarkGrey; height: 44px;
+		}
+		.wrap.broken {
+			img:before { 
+				content: " "; display: block; position: absolute; left: 13px; top: 11px; height: calc(100% - 22px); width: calc(100% - 26px);
+				background: #fff;
+			}
+
+			img:after { content: "🔗" " Image is broken"; display: block; text-align: center; position: absolute; left: 13px; top: 11px; }
+			.icon.resize { display: none; }
+		}
+
 		video { height: 100%; }
 		
 		.icon.resize {
