--- a/src/scss/page/main/index.scss
+++ b/src/scss/page/main/index.scss
@@ -3,13 +3,13 @@
 .pageMainIndex {
 	.wrapper { position: relative; z-index: 1; padding: 90px 0px 0px 0px; margin: 0px auto; }
 	
-	.title { color: #fff; position: relative; height: 40px; }
+	.title { color: #fff; position: relative; height: 48px; }
 	.title {
 		.rightMenu { position: absolute; right: 0px; top: 0px; }
 		.icon { width: 40px; height: 40px; vertical-align: top; margin-right: 8px; border-radius: 100%; cursor: pointer; }
 		.icon:hover, .icon.active { background-color: rgba(0, 0, 0, 0.2); }
 		.icon:last-child { margin-right: 0px; }
-		.icon.user { line-height: 40px; user-select: none; }
+		.icon.user { width: 48px; height: 48px; line-height: 48px; user-select: none; }
 		.icon.profile { background-size: 18px 18px; background-image: url('~img/icon/profile.svg'); display: none; }
 	}
 
