--- a/src/scss/popup/navigation.scss
+++ b/src/scss/popup/navigation.scss
@@ -26,7 +26,6 @@
 			.txt { line-height: 24px; color: $colorDarkGrey; }
 		}
 		
-		.items {  }
 		.items {
 			.pad { height: 12px; }
 			.item { 
@@ -51,6 +50,7 @@
 			.items { width: 33.33%; padding: 4px 16px; }
 			.items.center { padding-top: 39px; }
 			.items {
+				.row { width: calc(100% - 20px) !important; }
 				.item { margin-bottom: 16px; padding: 0px; height: 80px; border: 1px solid $colorLightGrey; border-radius: 8px; }
 				.item {
 					.inner { padding: 16px; }
