--- a/src/scss/component/dragLayer.scss
+++ b/src/scss/component/dragLayer.scss
@@ -2,7 +2,7 @@
 
 .dragLayer { position: fixed; z-index: 1000; left: -100000px; top: -100000px; }
 .dragLayer {
-	.inner { background: #fff; }
+	.inner {  }
 	.blocks { margin: 0px !important; }
 	.blocks {
 		.block { border: 0px; width: 100% !important; padding: 0px !important }
