--- a/src/scss/popup/editor/page.scss
+++ b/src/scss/popup/editor/page.scss
@@ -2,16 +2,18 @@
 
 .popups {
 	.popup.popupEditorPage {
-		.innerWrap { width: 800px; height: calc(100% - 20px); padding: 40px 0px; }
+		.innerWrap { width: 800px; height: calc(100% - 20px); padding: 0px; }
 		
 		.header { position: relative; padding: 0px; }
 		.header {
 			.menu { right: 0px; top: 0px; }
 		}
 		
-		.content { height: 100%; overflow-y: scroll; padding: 0px 48px; }
+		.content { height: 100%; overflow-y: scroll; padding: 0px; }
 		.selection { height: 100%; }
 		.editor { margin-top: 36px; }
 		.blocks { margin-left: -48px; }
+
+		.block.blockCover { width: 100%; left: 0px; border-radius: 12px 12px 0px 0px; overflow: hidden; }
 	}	
 }
