--- a/src/scss/component/pager.scss
+++ b/src/scss/component/pager.scss
@@ -12,7 +12,7 @@
 	
 	.dots { min-width: 24px; display: inline-block; padding: 0px 2px; text-align: center; margin-right: 8px; vertical-align: top; line-height: 24px; }
 
-    .icon.arrow { width: 24px; height: 24px; vertical-align: top; background-image: url('~img/arrow/pager0.svg'); }
+    .icon.arrow { width: 24px; height: 24px; vertical-align: top; background-image: url('~img/arrow/pager0.svg'); cursor: pointer; }
     .icon.arrow:hover { background-image: url('~img/arrow/pager1.svg'); }
 
     .icon.arrow.disabled:hover { background-image: url('~img/arrow/pager0.svg'); }
