--- a/src/scss/page/main/store.scss
+++ b/src/scss/page/main/store.scss
@@ -5,7 +5,7 @@
 
 	.content { height: 100%; padding-top: 40px; }
 
-	.head { width: 100%; height: 40px; padding: 8px 0px; text-align: center; position: absolute; top: 0px; left: 0px; }
+	.head { width: 100%; height: 40px; padding: 8px 0px; text-align: center; position: absolute; top: 0px; left: 0px; z-index: 1; }
 	.head {
 		.tabs { 
 			white-space: nowrap; background: #eae9e0; display: inline-block; height: 28px; padding: 2px; border-radius: 6px;
@@ -22,7 +22,7 @@
 
 	.body { width: 100%; height: 100%; overflow-y: auto; display: flex; flex-direction: column; }
 	.body {
-		.mid { text-align: center; padding: 92px 0px 56px 0px; margin: 0px auto; padding-bottom: 4px; }
+		.mid { text-align: center; padding: 44px 0px 56px 0px; margin: 0px auto; }
 		.mid {
 			.title { margin-bottom: 8px; }
 			.label { @include text-paragraph; margin-bottom: 18px; }
