--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -78,7 +78,7 @@
 
 		#section-featured::after { display: block; }
 
-		.scrollWrap { padding: 30px 0px; height: calc(100% - 54px); overflow-x: hidden; overflow-y: auto; }
+		.scrollWrap { padding: 30px 0px 16px 0px; height: calc(100% - 54px); overflow-x: hidden; overflow-y: auto; }
 		.item { padding: 0px 22px; margin-bottom: 1px; cursor: default; }
 		.item {
 			.icon.plus { margin-right: 4px; }
